# FH_Cpp_FastaFile

./: CMakeLists.txt  DNA.cpp  DNA.h  FASTA_Analysis.cpp  FASTA_Analysis.h  Protein.h  RNA.cpp  RNA.h  dna_level_zero.fasta  main.cpp  main_ALT.cpp  mapping_DNA_Protein.txt
add_helper/: FASTADesign.docx  IUPAC_IUB_Codes_analysed.ods  Interfaces.cpp
samples/: DNA_Protein_RNA_mix.fasta  DNA_level_zero.fasta  DNA_only.fasta  DNA_ultralong.fasta  Protein_level_zero.fasta  Protein_only.fasta  Protein_ultralong.fasta  RNA.frn  error_DNA_Protein_mix.frn
